Added get bean of the day api call Added logic to seed database when program started Added job to update bean of the day once at midnight Fixed migration table name issue

--- a/TombolaTest/appsettings.json
+++ b/TombolaTest/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Quartz": {
+    "quartz.scheduler.instanceName": "Quartz ASP.NET Core Sample Scheduler"
+  }
 }
